CSS TOP PADDING FOSFOROS

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,7 +56,9 @@ table{
   border-color: black;
   border-width: 1.11px;
 }
-
+.fosoforospng{
+  padding-top: 66px;
+}
 
 .socialmediacontainer {
   background-color: #fae3d9;
