--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,6 @@ body {
   background-color: #ffdfdf;
   text-align: center;
   font-family: 'Source Sans Pro', sans-serif;
-  margin: 0;
 }
 
 a {
@@ -29,11 +28,15 @@ h2 {
   font-size: 2rem;
   padding-top: 10px;
   color: #347474;
+  margin-top: 3%;
+  margin-bottom: 6%;
 }
 
 h3 {
   font-family: 'Spectral', serif;
   color: #010a43;
+  padding: 1.2%;
+
 }
 
 hr {
@@ -44,12 +47,16 @@ hr {
 }
 
 table {
-  margin: 0 auto;
+  margin: 3% auto 12%;
   text-align: left;
+  font-size: 1.32rem;
+}
+p{
+  padding: 1.2%;
 }
 
 /*************************CLASS SELECTORS************************/
-.containter-fluid {
+#cabeza {
   padding: 6% 15%;
   background-color: #f5c3bc;
 }
@@ -66,14 +73,6 @@ table {
   margin: 0 9px;
 }
 
-.topcontainer {
-  position: relative;
-  background-color: #f5c3bc;
-  border-style: none;
-  margin: 0;
-  padding-top: 39px;
-}
-
 .description {
   padding-top: 102px;
   padding-left: 0;
@@ -81,63 +80,60 @@ table {
 
 .matchbox {
   width: 450px;
-  margin: 39px 39px 39px 0;
+  border-radius: 100%;
 }
-/* ALINEAR BOTON */
+
 .bandcamp{
   padding: 18px;
-  text-align: left;
+  text-align: left;/* ALINEAR BOTON */
   display: block;
   margin-left: 0;
 }
 /* BANDAS */
 .fosoforospng {
   width: 600px;
-  padding-top: 57px;
 }
 
-.middle-container {
+#bands {
+  padding: 6% 18%;
   background-color: #ffdfdf;
   margin: 0;
 }
 
 /* NOSOTROS */
-.bio {
-  margin: auto 24%;
-  text-align: left;
-}
+#nosotros{
+  padding: 6% 24%;
 
+}
 .us-row {
-  line-height: 1.2;
   text-align: left;
-  margin: 60px auto;
-  width: 80.1%;
+  font-size: 1.2rem;
 }
 
 .bioimg {
   float: right;
-  width: 27%;
-  margin-left: 21px;
-  margin-top: 21px;
+  width: 18%;
+
 }
 
 .misionimg {
   float: left;
-  width: 27%;
+  width: 18%;
   margin-right: 30px;
   position: relative;
   bottom: 21px;
 }
 
 /* CONTACTO */
-.contact-me {
-  margin: 0 auto 0 auto;
+#contact-me {
+  padding: 6% 18%;
+
 }
 
 /* REDES */
-.bottom-container {
+#bottom-container {
   background-color: #f5c3bc;
-  padding: .333% 0;
+  padding: 3.3% 6%;
 }
 
 /* DERECHOS */
@@ -153,5 +149,7 @@ table {
   width: 9%;
   margin: 0 auto;
 }
-
+#our-info{
+  padding: 18% 18%;
+}
 /*************************ID SELECTORS************************/
