--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,7 +15,8 @@ a {
 a:hover {
   color: #fe346e;
 }
-h1{
+
+h1 {
   font-family: 'Spectral', serif;
   font-size: 2.7rem;
   font-weight: 900;
@@ -36,7 +37,6 @@ h3 {
   font-family: 'Spectral', serif;
   color: #010a43;
   padding: 1.2%;
-
 }
 
 hr {
@@ -51,7 +51,8 @@ table {
   text-align: left;
   font-size: 1.32rem;
 }
-p{
+
+p {
   padding: 1.2%;
 }
 
@@ -83,12 +84,14 @@ p{
   border-radius: 100%;
 }
 
-.bandcamp{
+.bandcamp {
   padding: 18px;
-  text-align: left;/* ALINEAR BOTON */
+  text-align: left;
+  /* ALINEAR BOTON */
   display: block;
   margin-left: 0;
 }
+
 /* BANDAS */
 .fosoforospng {
   width: 600px;
@@ -101,10 +104,10 @@ p{
 }
 
 /* NOSOTROS */
-#nosotros{
+#nosotros {
   padding: 6% 24%;
-
 }
+
 .us-row {
   text-align: left;
   font-size: 1.2rem;
@@ -113,7 +116,6 @@ p{
 .bioimg {
   float: right;
   width: 18%;
-
 }
 
 .misionimg {
@@ -127,7 +129,6 @@ p{
 /* CONTACTO */
 #contact-me {
   padding: 6% 18%;
-
 }
 
 /* REDES */
@@ -149,7 +150,40 @@ p{
   width: 9%;
   margin: 0 auto;
 }
-#our-info{
+
+#our-info {
   padding: 18% 18%;
 }
+
 /*************************ID SELECTORS************************/
+/* CSSMEDIAQUERY */
+@media (max-width:994px) {
+
+  p {
+    text-align: center;
+  }
+
+  h1 {
+    text-align: center;
+  }
+  h3{
+    text-align: center;
+  }
+  .bandcamp {
+    text-align: center;
+    display: inline-block;
+  }
+  .bioimg {
+    float: none;
+    display: block;
+   margin-left: auto;
+   margin-right: auto;
+  }
+  .misionimg {
+    float: none;
+    display: block;
+     margin-left: auto;
+     margin-right: auto;
+  }
+
+}
