--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,17 +39,18 @@ h3 {
   padding: 1.2%;
 }
 
+h4 {
+  font-family: 'Oxygen', sans-serif;
+  font-size: .9rem;
+  margin-left: 0;
+  font-weight: bolder;
+}
+
 hr {
   border-style: dotted none none;
   border-color: #404b69;
   border-width: 5.55px;
   width: 18.66%;
-}
-
-table {
-  margin: 3% auto 12%;
-  text-align: left;
-  font-size: 1.32rem;
 }
 
 p {
@@ -94,13 +95,61 @@ p {
 
 /* BANDAS */
 .fosoforospng {
-  width: 600px;
+  width: 51%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#bands {
-  padding: 6% 18%;
+/* .release-art{
+} */
+#releases {
+  padding: 6% 12%;
   background-color: #ffdfdf;
-  margin: 0;
+}
+
+.image {
+  width: 212px;
+  padding-bottom: 6%;
+}
+
+.link-img {
+  width: 212px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+/* <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Transiberiano.jpg" alt="TRANS" style="
+    margin-left: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
+    border-right-width: 0px;
+    border-top-width: 0px;
+"> */
+.lanzamientos {
+  width: 212px;
+  padding: 0;
+  margin-left:0 ;
+  margin-right: 0;
+  margin-bottom: 0;
+  border-left-width: 0;
+  border-bottom-width: 0;
+  border-right-width: 0;
+  border-top-width: 0;
+  margin-top: 0;
+}
+
+.artist-release {
+  font-family: 'Spectral';
+  font-size: .9rem;
+    color: black;
+}
+
+.text-rel {
+  text-align: left;
 }
 
 /* NOSOTROS */
@@ -158,7 +207,6 @@ p {
 /*************************ID SELECTORS************************/
 /* CSSMEDIAQUERY */
 @media (max-width:994px) {
-
   p {
     text-align: center;
   }
@@ -166,24 +214,27 @@ p {
   h1 {
     text-align: center;
   }
-  h3{
+
+  h3 {
     text-align: center;
   }
+
   .bandcamp {
     text-align: center;
     display: inline-block;
   }
+
   .bioimg {
     float: none;
     display: block;
-   margin-left: auto;
-   margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
+
   .misionimg {
     float: none;
     display: block;
-     margin-left: auto;
-     margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
-
 }
