--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,64 +1,64 @@
 /****************************TAG SELECTORS********************************/
 body {
-  background-color: #ffdfdf;
   text-align: center;
   font-family: 'Source Sans Pro', sans-serif;
+  background-color: #fff0f5
+}
+
+h1, h2, h3 {
+  font-family: 'Spectral', serif;
+  color: #347474;
+}
+
+p {
+  padding: 1.2%;
+  font-size: 1.2rem;
 }
 
 a {
-  font-family: 'Source Sans Pro', sans-serif;
   color: #204051;
   text-decoration: none;
-  margin: 0 4.3px 3px 4.3px;
+  margin: 0 4.3px 3px;
 }
 
 a:hover {
   color: #fe346e;
 }
 
-h1 {
-  font-family: 'Spectral', serif;
+/*************************CLASS SELECTORS************************/
+/* HEADINGS */
+.big-heading {
   font-size: 2.7rem;
   font-weight: 900;
   text-align: left;
-  color: #347474;
 }
-
-h2 {
-  font-family: 'Spectral', serif;
-  font-size: 2rem;
-  padding-top: 10px;
-  color: #347474;
-  margin-top: 3%;
-  margin-bottom: 6%;
-}
-
-h3 {
-  font-family: 'Spectral', serif;
+.subtitle {
   color: #010a43;
   padding: 1.2%;
 }
-
-h4 {
+.product-name {
   font-family: 'Oxygen', sans-serif;
   font-size: .9rem;
   margin-left: 0;
   font-weight: 700;
 }
 
-hr {
-  border-style: dotted none none;
-  border-color: #404b69;
-  border-width: 5.55px;
-  width: 18.66%;
+/* CONTAINERS */
+.container-fluid{
+  padding: 6% 15%;
 }
-
-p {
-  padding: 1.2%;
+/* COLORS */
+.dark{
+  background-color: #f5c3bc;
 }
-
-/*************************CLASS SELECTORS************************/
+.light{
+  background-color: #ffdfdf;
+}
+.lighter{
+  background-color: #fff0f5
+}
 /* TITLE */
+
 .navbar-brand {
   font-family: 'Oxygen', sans-serif;
   font-size: 1.4rem;
@@ -88,23 +88,15 @@ p {
   margin-left: 0;
 }
 
-/* BANDAS */
-.fosoforospng {
-  width: 51%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+/* RELEASES */
 
-/* .release-art{
-} */
 #releases {
   padding: 3% 12% 6%;
-  background-color: #ffdfdf;
+  text-align: left;
 }
 
 .lanzamientos-carousel {
-  width: 1113px;
+  width: 99%;
   height: 222px;
   object-fit: cover;
   padding: 0;
@@ -127,16 +119,6 @@ p {
   margin-right: 0;
 }
 
-/* <img class="lanzamientos img-thumbnail" src="images/ART ALBUMS/Transiberiano.jpg" alt="TRANS" style="
-    margin-left: 0px;
-    margin-bottom: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    border-left-width: 0px;
-    border-bottom-width: 0px;
-    border-right-width: 0px;
-    border-top-width: 0px;
-"> */
 .lanzamientos {
   width: 212px;
   padding: 0;
@@ -144,25 +126,17 @@ p {
 }
 
 .artist-release {
-  font-family: 'Spectral';
-  font-size: .9rem;
-  color: black;
+  font-size: .84rem;
   padding-top: 1.8%;
-}
-
-.text-rel {
-  text-align: left;
 }
 
 /* NOSOTROS */
 #nosotros {
-  padding: 6% 21%;
-  background-color: #fff0f5
+  padding: 3% 21%;
 }
 
 .us-row {
   text-align: left;
-  font-size: 1.2rem;
 }
 
 .bioimg {
@@ -183,35 +157,24 @@ p {
   padding: 12% 18%;
 }
 
-/* REDES */
-#bottom-container {
-  background-color: #f5c3bc;
-  padding: 3.3% 6%;
-}
-
 /* DERECHOS */
 .copyriht {
-  font-size: .81rem;
+  font-size: .99rem;
   font-weight: lighter;
-  margin-bottom: 0;
-  padding: 12px;
+  margin: 1.2% auto 0;
 }
 
-/* NUESTRAINFO */
-.infohr {
-  width: 9%;
-  margin: 0 auto;
+
+/* INFO.html */
+
+.fosoforospng {
+  width: 51%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#our-info {
-  padding: 18% 18%;
-}
 
-/*************************ID SELECTORS************************/
-#cabeza {
-  padding: 6% 15%;
-  background-color: #f5c3bc;
-}
 
 /* CSSMEDIAQUERY */
 @media (max-width:994px) {
@@ -219,7 +182,7 @@ p {
     text-align: center;
   }
 
-  h1 {
+  .big-heading {
     text-align: center;
   }
 
