--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 /****************************TAG SELECTORS********************************/
 body {
-  text-align: center;
+  text-align: left;
   font-family: 'Source Sans Pro', sans-serif;
   background-color: #fff0f5
 }
@@ -18,8 +18,8 @@ p {
 a {
   color: #204051;
   text-decoration: none;
-margin: 0;
-padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 a:hover {
@@ -31,12 +31,13 @@ a:hover {
 .big-heading {
   font-size: 2.7rem;
   font-weight: 900;
-  text-align: left;
 }
+
 .subtitle {
   color: #010a43;
   padding: 1.2%;
 }
+
 .product-name {
   font-family: 'Oxygen', sans-serif;
   font-size: .9rem;
@@ -44,28 +45,41 @@ a:hover {
   font-weight: 700;
 }
 
-/* CONTAINERS */
-.container-fluid{
-  padding: 6% 15%;
+/* STYLES */
+.row {
+  margin: 0;
 }
+
+/* CONTAINERS */
+.container-fluid {
+  padding: 9% 15%;
+}
+
 /* COLORS */
-.dark{
+.dark {
   background-color: #f5c3bc;
 }
-.light{
+
+.light {
   background-color: #ffdfdf;
 }
-.lighter{
+
+.lighter {
   background-color: #fff0f5
 }
-/* TITLE */
 
-#cabeza{
+/* TITLE */
+#cabeza {
   padding: 0;
   margin: 0;
 }
-.navbar{
-  padding:8px 0;
+.top{
+  padding-top: 6%;
+}
+
+.navbar {
+  padding: .9% 0;
+  margin-top: 0;
 }
 
 .navbar-brand {
@@ -79,8 +93,8 @@ a:hover {
   margin: 0;
 }
 
-.nav-link{
-  padding: 8px 0px 8px 0px;
+.nav-link {
+  padding: 8px 0px;
 }
 
 .description {
@@ -91,30 +105,30 @@ a:hover {
 .matchbox {
   width: 450px;
   border-radius: 100%;
-  text-align: left;
+  text-align: right;
 }
 
 .bandcamp {
   padding: 18px;
-  text-align: left;
   /* ALINEAR BOTON */
   display: block;
   margin-left: 0;
 }
 
 /* RELEASES */
-
 #releases {
-  padding: 3% 12% 6%;
-  text-align: left;
+  padding: 9% 12%;
 }
 
 .lanzamientos-carousel {
-  width: 99%;
+  width: 100%;
   height: 222px;
   object-fit: cover;
   padding: 0;
-  margin: 0 0 6%;
+  margin: 0 0 5.1%;
+  border: none;
+  border-radius: 1.5%;
+  c
 }
 
 .carousel-1 {
@@ -124,19 +138,18 @@ a:hover {
 
 .image {
   width: 212px;
-  padding:0 0 6% 0;
+  padding: 0 0 6% 0;
 }
 
 .link-img {
-  width: 212px;
-  margin-left: 0;
-  margin-right: 0;
+  margin: auto 0;
 }
 
 .lanzamientos {
   width: 212px;
   padding: 0;
   margin: 0;
+  border: none;
 }
 
 .artist-release {
@@ -146,11 +159,7 @@ a:hover {
 
 /* NOSOTROS */
 #nosotros {
-  padding: 3% 21%;
-}
-
-.us-row {
-  text-align: left;
+  padding: 6% 21%;
 }
 
 .bioimg {
@@ -168,10 +177,15 @@ a:hover {
 
 /* CONTACTO */
 #contact-me {
-  padding: 12% 18%;
+  padding: 15% 18%;
+  text-align: center;
 }
 
-.social-link{
+#bottom-container {
+  text-align: center;
+}
+
+.social-link {
   margin: 0 6px 0 3px;
 }
 
@@ -182,34 +196,26 @@ a:hover {
   margin: 1.2% auto 0;
 }
 
-
 /* INFO.html */
-
 .fosoforospng {
   width: 51%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
-
+#our-info{
+  text-align: center;
+}
 
 /* CSSMEDIAQUERY */
 @media (max-width:994px) {
-  p {
-    text-align: center;
-  }
-
-  .big-heading {
-    text-align: center;
-  }
-
-  h3 {
-    text-align: center;
-  }
+body{
+  text-align: center;
+}
+.big-heading {
+  font-size: 2.4rem;
+  font-weight: 700;
+}
 
   .bandcamp {
-    text-align: center;
     display: inline-block;
   }
 
@@ -228,12 +234,14 @@ a:hover {
   }
 }
 
-.artist{
+
+
+.artist {
   width: 144px;
   margin-right: 3%;
   float: left;
 }
-#artistas-bandas{
+
+#artistas-bandas {
   padding: 6% 12%;
-  text-align: left;
 }
