--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,6 +72,7 @@ a:hover {
 #cabeza {
   padding: 0;
   margin: 0;
+
 }
 .top{
   padding-top: 6%;
@@ -103,9 +104,13 @@ a:hover {
 }
 
 .matchbox {
-  width: 450px;
-  border-radius: 100%;
-  text-align: right;
+  width: 100%;
+  padding: 12%;
+
+}
+.cont-fos{
+  width: 100%;
+  padding:0;
 }
 
 .bandcamp {
@@ -122,7 +127,7 @@ a:hover {
 
 .lanzamientos-carousel {
   width: 100%;
-  height: 222px;
+  height: 333px;
   object-fit: cover;
   padding: 0;
   margin: 0 0 5.1%;
