--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,7 +54,9 @@ a:hover {
 .container-fluid {
   padding: 9% 15%;
 }
-
+#cabeza , .container-fluid {
+  padding: 9% 15% 3%;
+}
 /* COLORS */
 .dark {
   background-color: #f5c3bc;
@@ -72,9 +74,9 @@ a:hover {
 #cabeza {
   padding: 0;
   margin: 0;
-
 }
-.top{
+
+.top {
   padding-top: 6%;
 }
 
@@ -105,12 +107,12 @@ a:hover {
 
 .matchbox {
   width: 100%;
-  padding: 12%;
-
+  padding: 12% 12% 3%;
 }
-.cont-fos{
+
+.cont-fos {
   width: 100%;
-  padding:0;
+  padding: 0;
 }
 
 .bandcamp {
@@ -122,7 +124,7 @@ a:hover {
 
 /* RELEASES */
 #releases {
-  padding: 9% 12%;
+  padding: 9% 12% 3%;
 }
 
 .lanzamientos-carousel {
@@ -133,17 +135,13 @@ a:hover {
   margin: 0 0 5.1%;
   border: none;
   border-radius: 1.5%;
-  c
+
 }
 
-.carousel-1 {
-  text-align: center;
-  margin-top: 1.5%;
-}
 
 .image {
   width: 212px;
-  padding: 0 0 6% 0;
+  padding: 0 3% 1.5%;
 }
 
 .link-img {
@@ -161,7 +159,11 @@ a:hover {
   font-size: .84rem;
   padding-top: 1.8%;
 }
-
+.release-btn{
+  text-align: right;
+  padding: 0;
+  margin: 0;
+}
 /* NOSOTROS */
 #nosotros {
   padding: 6% 21%;
@@ -206,19 +208,23 @@ a:hover {
   width: 51%;
 }
 
-#our-info{
+#our-info {
   text-align: center;
 }
 
 /* CSSMEDIAQUERY */
-@media (max-width:994px) {
-body{
-  text-align: center;
-}
-.big-heading {
-  font-size: 3rem;
-  font-weight: 700;
-}
+@media (max-width:1199px) {
+  body {
+    text-align: center;
+  }
+  .release-btn{
+    text-align: center;
+  }
+
+  .big-heading {
+    font-size: 3rem;
+    font-weight: 700;
+  }
 
   .bandcamp {
     display: inline-block;
@@ -238,8 +244,6 @@ body{
     margin-right: auto;
   }
 }
-
-
 
 .artist {
   width: 144px;
