--- a/CSS/style.css
+++ b/CSS/style.css
@@ -141,7 +141,7 @@ a:hover {
 
 .image {
   width: 212px;
-  padding: 0 3% 1.5%;
+  padding: 0 3% 6%;
 }
 
 .link-img {
@@ -222,11 +222,13 @@ a:hover {
   }
 
   .big-heading {
-    font-size: 3.9rem;
+    font-size: 5rem;
+    margin-bottom: 18%;
   }
 
   .bandcamp {
     display: inline-block;
+    font-size: 2.1rem;
   }
 
   .bioimg {
