BIGGER BTN AND TEXT, LESS PADDING ON MBL

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -217,6 +217,9 @@ a:hover {
   body {
     text-align: center;
   }
+  .container-fluid {
+    padding: 6% 6%;
+  }
   .release-btn{
     text-align: center;
   }
