--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,9 @@
 body {
   text-align: left;
   font-family: 'Source Sans Pro', sans-serif;
-  background-color: #fff0f5
+  padding-top: 5.1%;
+  background-color: #f5c3bc;
+
 }
 
 h1, h2, h3 {
@@ -55,7 +57,8 @@ a:hover {
   padding: 9% 15%;
 }
 #cabeza , .container-fluid {
-  padding: 9% 15% 3%;
+  padding: 3% 12% 3%;
+  margin: 0;
 }
 /* COLORS */
 .dark {
@@ -75,13 +78,17 @@ a:hover {
   padding: 0;
   margin: 0;
 }
+.sticky-top{
+  background-color: #f5c3bc;
+
+}
 
 .top {
-  padding-top: 6%;
+  padding-top: 0;
 }
 
 .navbar {
-  padding: .9% 0;
+  padding: .6% 12% .6%;
   margin-top: 0;
 }
 
@@ -124,7 +131,7 @@ a:hover {
 
 /* RELEASES */
 #releases {
-  padding: 9% 12% 3%;
+  padding: 3% 12% 3%;
 }
 
 .lanzamientos-carousel {
@@ -141,7 +148,12 @@ a:hover {
 
 .image {
   width: 212px;
-  padding: 0 3% 6%;
+  padding: 4.2% 3% 0;
+}
+
+.release-pg  .image {
+  width: 212px;
+  padding: 0 3% 6% 0;
 }
 
 .link-img {
@@ -166,7 +178,7 @@ a:hover {
 }
 /* NOSOTROS */
 #nosotros {
-  padding: 6% 21%;
+  padding: 12% 21%;
 }
 
 .bioimg {
@@ -184,7 +196,7 @@ a:hover {
 
 /* CONTACTO */
 #contact-me {
-  padding: 15% 18%;
+  padding: 18% 18%;
   text-align: center;
 }
 
@@ -215,16 +227,33 @@ a:hover {
 /* CSSMEDIAQUERY */
 @media (max-width:1199px) {
   body {
+    font-size: 1.5rem;
     text-align: center;
   }
+  #cabeza , .container-fluid {
+    padding: 3%;
+  }
+  .navbar {
+    padding: .6% 3% .6%;
+  }
+  .navbar-brand {
+    font-size: 2.1rem;
+  }
+  .nav-link {
+    font-size: 3rem;
+  }
 
+  .nav-item {
+    margin: 0;
+  }
   .release-btn{
     text-align: center;
   }
 
   .big-heading {
     font-size: 5rem;
-    margin-bottom: 18%;
+    margin-bottom: 12%;
+    text-align: center;
   }
 
   .bandcamp {
@@ -232,6 +261,10 @@ a:hover {
     font-size: 2.1rem;
   }
 
+  .image {
+    width: 212px;
+    padding: .7%;
+  }
   .bioimg {
     float: none;
     display: block;
